<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Register">

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/register"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textStyle="bold" />

    <EditText
        android:id="@+id/etRegisterEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/e_mail"
        app:layout_constraintEnd_toEndOf="@+id/tvRegister"
        app:layout_constraintStart_toStartOf="@+id/tvRegister"
        app:layout_constraintTop_toBottomOf="@+id/tvRegister"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etRegisterPasswd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/etRegisterEmail"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/etRegisterEmail"
        app:layout_constraintTop_toBottomOf="@+id/etRegisterEmail" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="370dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="176dp"
        android:layout_height="54dp"
        android:layout_marginTop="84dp"
        android:text="@string/register"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/etRegisterPasswd"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/etRegisterPasswd"
        app:layout_constraintTop_toBottomOf="@+id/etRegisterPasswd" />

    <TextView
        android:id="@+id/tvClicktoLogin"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/click_to_login"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btnRegister"
        app:layout_constraintStart_toStartOf="@+id/btnRegister"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />


</androidx.constraintlayout.widget.ConstraintLayout>